<resources>
    <string name="app_name">My Application</string>
    <string name="Calculator">计算器</string>
    <string name="Clear">清屏</string>
    <string name="Allclear">全清</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiplication">*</string>
    <string name="Division">/</string>
    <string name="square">x^2</string>
    <string name="reagan">√x</string>
    <string name="sign">=</string>
    <string name="spot">.</string>
    <string name="positive">+/-</string>
</resources>
