<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/Calculator"
            android:textColor="@color/colorRead" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorWhite" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button

            android:id="@+id/jump"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:onClick="onJump"
            android:text="@string/Clear"
            android:textSize="30dp" />

        <Button

            android:id="@+id/button16"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/Allclear"
            android:textSize="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/button1"
            android:gravity="center"
            android:text="@string/two"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/button2"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="25dp" />

        <Button
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/Plus"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/button4"
            android:gravity="center"
            android:text="@string/five"
            android:textSize="25dp" />

        <Button
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/Minus"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/button5"
            android:layout_toRightOf="@+id/button5"
            android:gravity="center"
            android:text="@string/six"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/seven"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/button7"
            android:gravity="center"
            android:text="@string/eight"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/button8"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="25dp" />

        <Button
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/Multiplication"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button10"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/button10"
            android:layout_toRightOf="@+id/button10"
            android:gravity="center"
            android:text="@string/spot"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/Division" />

        <Button
            android:id="@+id/button12"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/button11"
            android:layout_toRightOf="@+id/button11"
            android:gravity="center"
            android:text="@string/sign"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button13"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/positive"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/button13"
            android:gravity="center"
            android:text="@string/square"
            android:textSize="25dp" />

        <Button
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/reagan"
            android:textSize="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"></RelativeLayout>

</LinearLayout>